--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
          <section class="section">
             <h1 class="section__header">Register</h1>
             <p>Create your account. It`s free and only takes a minute.</p>
-            <form class="section__form" action="" method="get">
-               <label>
+            <form class="section__form" action="#" method="get">
+               <div class="containForFullName">
                   <input
                      type="text"
                      name="First Name"
-                     id="First Name"
-                     placeholder="First Name"
+                     id="FirstName"
+                     placeholder="FirstName"
                      required
                   />
                   <input
                      type="text"
                      name="Last Name"
-                     id="Last Name"
-                     placeholder="Last Name"
+                     id="LastName"
+                     placeholder="LastName"
                      required
                   />
-               </label>
+               </div>
                <input type="email" name="email" id="email" placeholder="Email" required />
                <input
                   type="password"
@@ -38,9 +38,9 @@
                />
                <input
                   type="password"
-                  name="password"
-                  id="password"
-                  placeholder="Confirm Password"
+                  name="ConfirmPassword"
+                  id="ConfirmPassword"
+                  placeholder="ConfirmPassword"
                   required
                />
                <label class="checkbox-font">
